# kohaku_ros_pkgs

./: README.md
kohaku_description/: CMakeLists.txt  package.xml
kohaku_description/launch/: display.launch  display_dualarm.launch  kohaku_dualarm_upload.launch  kohaku_upload.launch  urdf.rviz  urdf_dualarm.rviz
kohaku_description/meshes/: base_link.prefab  base_link.stl  base_link_0.asset  base_link_1.asset  base_link_10.asset  base_link_2.asset  base_link_3.asset  base_link_4.asset  base_link_5.asset  base_link_6.asset  base_link_7.asset  base_link_8.asset  base_link_9.asset  camera_base_1.prefab  camera_base_1.stl  camera_base_1_0.asset  camera_base_1_1.asset  camera_base_1_2.asset  camera_base_1_3.asset  camera_base_1_4.asset  camera_link_1.prefab  camera_link_1.stl  camera_link_1_0.asset  camera_link_1_1.asset  camera_link_1_2.asset  camera_link_1_3.asset  camera_link_1_4.asset  camera_link_1_5.asset  left_base_frame_1.prefab  left_base_frame_1.stl  left_base_frame_1_0.asset  left_base_frame_1_1.asset  left_forearm_link_1.prefab  left_forearm_link_1.stl  left_forearm_link_1_0.asset  left_forearm_link_1_1.asset  left_forearm_link_1_10.asset  left_forearm_link_1_11.asset  left_forearm_link_1_2.asset  left_forearm_link_1_3.asset  (+105 more)
kohaku_description/urdf/: _d435.urdf.xacro  kohaku.gazebo.xacro  kohaku.mesh.xacro  kohaku_dualarm.gazebo.xacro  kohaku_dualarm.mesh.xacro  kohaku_dualarm.sensors.xacro  kohaku_dualarm_hw.trans.xacro  kohaku_dualarm_hw.urdf.xacro  kohaku_dualarm_sim.trans.xacro  kohaku_dualarm_sim.urdf.xacro  kohaku_hw.trans.xacro  kohaku_hw.urdf.xacro  kohaku_sim.trans.xacro  kohaku_sim.urdf.xacro  materials.xacro  materials_kohaku.xacro
kohaku_dualarm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kohaku_dualarm_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kohaku_dualarm.srdf  ompl_planning.yaml  ros_controllers_hw.yaml  ros_controllers_sim.yaml  (+3 more)
kohaku_gazebo/: CMakeLists.txt  README.md  package.xml
kohaku_launch/: CMakeLists.txt  README.md  package.xml
kohaku_launch/launch/: kohaku_auto_calibration.launch  kohaku_bringup.launch  kohaku_display.launch  kohaku_display.rviz  kohaku_dualarm_auto_calibration.launch  kohaku_dualarm_bringup.launch  kohaku_dualarm_display.launch  kohaku_dualarm_display.rviz  kohaku_dualarm_display_sim.rviz  kohaku_dualarm_restart_controllers.launch  kohaku_dualarm_shutdown_controllers.launch  kohaku_restart_controller.launch
kohaku_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kohaku_ros_driver/: CMakeLists.txt  README.md  package.xml  setup.py
kohaku_ros_driver/launch/: kohaku_control.launch  kohaku_dualarm_control.launch  kohaku_dualarm_joint_check.launch  kohaku_dualarm_ros_driver.launch  kohaku_ros_driver.launch
kohaku_ros_driver/scripts/: jointstates_integrator_node  kohaku_action_server_node  kohaku_ros_driver_node
kohaku_ros_driver/src/kohaku_ros_driver/: jointstates_integrator_node.py  kohaku_action_server_node.py  kohaku_ros_driver_node.py
kohaku_simple_joint_command_sender/: CMakeLists.txt  README.md  package.xml  setup.py
kohaku_utils/: CMakeLists.txt  README.md  package.xml
kohaku_utils/scripts/: kohaku_auto_joint_calibration  kohaku_manual_joint_calibration  kohaku_reboot_controller  kohaku_restart_controller  kohaku_shutdown_controller
(+57 files in other folders)
