<?xml version="1.0"?>
<package format="2">
  <name>kohaku_description</name>
  <version>0.0.0</version>
  <description>The kohaku_description package</description>

  <maintainer email="yoshikai@qibitech.com">T.Yoshikai</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>

</package>
