<?xml version="1.0"?>
<package format="2">
  <name>kohaku_launch</name>
  <version>0.0.0</version>
  <description>Launch files for kohaku</description>
  <maintainer email="yoshikai@qibitech.com">qibitech</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
